# Histopathologic-Cancer-Detection

./: .gitignore  README.md  main.py  pyproject.toml  run_ensemble_models.py
Classical_ML/: run_ensemble_models.py
Classical_ML/models/: catboost_model.py  logistic_regression.py  naive_bayes.py  random_forest.py  xgboost_model.py
DL_exp/: .gitignore  README.md
DL_exp/scripts/: gradcam_cnn.py
DL_exp/src_lda/: __init__.py  config.py  data.py  features.py  heads.py  logging_utils.py  metrics.py  models.py  plotting.py  run_all.py  task2_lda.py  task3_reglda.py  trainers.py  transforms.py  utils.py
DL_exp/src_optuna/: __init__.py  analysis.py  config.py  models.py  objective.py  rebuild_best_params.py  run.py  training.py  utils.py
EDA/: .gitignore  README.md
EDA/src/: color_analysis.py  config.py  data_loading.py  dimensionality_reduction.py  eda.py  eda_visualization.py  edge_density_analysis.py  feature_engineering.py  kl_divergence_analysis.py  main.py  morphological_analysis.py  pixel_stats.py  texture_analysis.py
ML/: README.md  feature_extraction.py  main.py  run_ensemble_models.py
ML/models/: adaboost_model.py  catboost_model.py  logistic_regression.py  naive_bayes.py  random_forest.py  svm.py
ML/results/: results_full96.csv
csv/: alexnet_log.csv  cnn_log.csv  vgg16_log.csv
eda/: pyproject.toml
eda/src/: batch_utils.py  color_analysis.py  config.py  data_loading.py  dimensionality_reduction.py  eda.py  eda_visualization.py  kl_divergence_analysis.py  morphological_analysis.py  pixel_stats.py  texture_analysis.py
models/: xgboost_model.py
results/: results_crop32.csv
src/: classification_baseline.py  color_analysis.py  config.py  consolidate_results.py  data.py  data_loading.py  dimensionality_reduction.py  distributed.py  eda.py  feature_engineering.py  feature_extraction.py  logging_utils.py  main.py  models.py  morphological_analysis.py  pixel_stats.py  plotting.py  reporting.py  summary.py  texture_analysis.py  training.py  utils.py
src_lda/: __main__.py  ddp_common.py  heads.py  run_all.py  task1.py  task2_lda.py  task3_reglda.py  trainers.py
src_optuna/: config.py  objective.py  rebuild_best_params.py  run.py
(+44 files in other folders)
