[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histopathologic-cancer-detection"
version = "0.1.0"
description = "EDA, deep-learning, and classical ML pipelines for histopathologic cancer detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "optuna>=3.0",
  "pandas>=2.0",
  "pillow>=10.0",
  "scikit-image>=0.21",
  "scikit-learn>=1.3",
  "seaborn>=0.12",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm>=4.65",
  "xgboost>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.380",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
histopath = "main:main"
histopath-ml = "ML.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["DL_exp*", "EDA*", "ML*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.10"
include = ["main.py", "DL_exp", "EDA", "ML"]
exclude = ["**/__pycache__", "**/.pytest_cache", "**/.mypy_cache", "**/.venv", "**/outputs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
