[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histopath-eda"
version = "0.1.0"
description = "EDA pipeline for histopathologic cancer detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.65",
  "opencv-python>=4.8",
  "scikit-image>=0.21",
  "scikit-learn>=1.3",
  "Pillow>=10.0",
]

[project.scripts]
run-eda = "main:main"

[tool.setuptools]
py-modules = [
  "main",
  "eda",
  "config",
  "batch_utils",
  "data_loading",
  "eda_visualization",
  "pixel_stats",
  "color_analysis",
  "texture_analysis",
  "morphological_analysis",
  "dimensionality_reduction",
  "kl_divergence_analysis",
]

[tool.setuptools.package-dir]
"" = "src"
